Cleaned up Insights documentation to focus on refId

--- a/content/data/account-aggregator/fi-data-types.mdx
+++ b/content/data/account-aggregator/fi-data-types.mdx
@@ -883,9 +883,10 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
             "folioNo": "876",
             "isin": "INUS-000402625-0",
             "lienUnits": "15",
-            "lockingUnits": "12",
+            "lockinUnits": "12",
             "mode": "SIP",
             "nav": "512",
+            "navDate": "2021-06-22",
             "rate": "469",
             "registrar": "CAMS",
             "schemeCode": "APMFST",
