--- a/content/data/insights/insights.mdx
+++ b/content/data/insights/insights.mdx
@@ -7,7 +7,7 @@ visible_in_sidebar: true
 
 ## List of insights
 
-You can create templates by picking only those insights that you need. Below is a list of all available insights that Setu Insights can provide—
+You can create templates by picking only those insights that you need. Below is a quick list of some available insights. Reach out if you need more custom ones—
 
 | Insight name                             | Details                                                             |
 | ---------------------------------------- | ------------------------------------------------------------------- |
