--- a/content/data/insights/overview.mdx
+++ b/content/data/insights/overview.mdx
@@ -7,20 +7,12 @@ visible_in_sidebar: true
 
 ## What is Setu Insights?
 
-Setu’s Insight API gives you actionable insights from a customer's bank statement about their income, expenditure and financial history.
+Setu's Insights API gives you actionable insights from a customer's financial information, such as bank statements, about their income, expenditure and financial history.
 
-The Setu Insights API consumes financial data uploaded via the Account Aggregator(AA) as well as external sources like PDF. The insights generated can be tailor made to fulfill your specific requirements, ranging from underwriting use cases, to personal finance management.
-
-<Callout type="tip">
-  Along with bank statement analysis, Setu Insights will support analysis of
-  various data sources such as GST, ITR, Insurance etc., as and when these data
-  types become available on AA.
-</Callout>
-
-<br />
+The Insights API consumes financial data uploaded via the Account Aggregator(AA) as well as external sources like PDF. The insights generated can be tailor-made to fulfill your specific requirements, ranging from underwriting use cases, to personal finance management.
 
 <Callout type="highlight">
-  Setu Insights provides output in various formats such as XML, JSON, XLS.
+  Setu Insights provides output in various formats such as JSON, XML, XLS.
   Output in the form of dashboard will be made available soon.
 </Callout>
 
@@ -28,10 +20,15 @@ The Setu Insights API consumes financial data uploaded via the Account Aggregato
 
 ### What can you do with this product?
 
-With Setu Insights, you can analyse various financial statements like bank statements, GST returns, securities accounts etc. Some possible use-cases include—
+With Setu Insights, you can analyse various financial statements like bank statements, equities, mutual funds, ETFs, GST returns, securities accounts etc. Some possible use-cases include—
 - **Income verification and underwriting**—Verify applicant income and assess creditworthiness by analyzing bank statements. Extract income sources, evaluate financial stability and streamline the loan approval process.
 - **Loan monitoring**—Monitor borrower's financial health and loan obligations. Track cash flow, identify irregularities and manage loan portfolios effectively. Stay proactive with real-time insights into borrower's ability to meet loan obligations and mitigate risks.
 - **Personal finance management and wealth management**—Empower individuals to manage personal finances effectively. Categorise transactions, generate spending reports and gain insights to set financial goals and make informed decisions. For wealth managers, access holistic financial data to offer personalized advice and tailored investment strategies.
+
+<Callout type="tip">
+  Setu Insights will support analysis of additional financial information such as Equities, Mutual Funds, ETFs, GST, ITR, Insurance etc., as and when these data
+  types become available on AA.
+</Callout>
 
 <hr class="primary" />
 
