--- a/content/data/insights/quickstart.mdx
+++ b/content/data/insights/quickstart.mdx
@@ -9,8 +9,10 @@ visible_in_sidebar: true
 
 Here is a quick summary of steps to help you integrate with Setu’s Insights API. Before you start, there are some key terms that will be referred to periodically in the documentation—
 
-- **FI Data block**—FI Data blocks are the data received from the FIP (Financial information provider), via the AA. Currently, we only support bank statement datablock.
-- **Template**—A template is a pre-configured format that determines the structure of the generated report, including which insights to generate. You can pick and choose exactly what insights should be added to a template, based on your needs. For example, if you only want to generate income and expense insights of a customer, the template can contain only those two insights.
+- **Reference Id**—Developers can define an identifier to manage and track one customer's data points. This identifier is used throughout the lifecycle to push data, generate insights and finally purge any data from the system.
+- **FI Data block**—FI Data blocks are the data received from the FIP (Financial information provider), via the AA. Currently, we support bank statement, equities, mutual_fund and etf datablocks. In addition, we support ePDF based bank statements for Indian banks.
+- **Template**—A template is a pre-configured format that determines the structure of the generated report, including which insights to generate. You can pick and choose exactly what insights should be added to a template, based on your needs.  
+For example, if you only want to generate income and expense insights of a customer, the template can contain only those two insights.
 
 <Callout type="tip">
   Please refer to the Account Aggregator's{" "}
@@ -33,8 +35,9 @@ You need to send in the below information to [insights@setu.co](mailto:insights@
 | **FIU ID**                | This can be obtained from your AA integration                                                                                                        |
 | **Notification endpoint** | An endpoint where Setu will send you webhook notifications for events. See <a href="/data/insights/notifications" target="_blank">notifications</a>. |
 | **Template name**         | Choose a suitable name, which helps you easily recognise this template                                                                               |
-| **Insights required**     | A list of required Insights. See the full list <a href="/data/insights/insights" target="_blank">**here**</a>.                                       |
-| **Output format**         | Format in which you need the output — currently only `JSON` is supported             
+| **Use case**         | Sharing your use case will help us guide you with finalizing relevant insights. Typical use cases, Loan Underwriting, F&O, Portfolio Management, Personal Finance Management, etc. |
+| **Insights required**     | A list of required Insights. Send an email to [insights@setu.co](mailto:insights@setu.co) for full list of insights.                                       |
+| **Output format**         | Format in which you need the output — currently we support `JSON`, and `XLSX`.
 <br />
 
 Setu will create a template for you and share a `templateID`, which can be used
@@ -44,13 +47,13 @@ in the API calls.
 
 ### Step 2—Feed data
 
-Once you have the financial data of a user, you can feed this data into Setu Insights as a FI Data block. A `dataId` is assigned to to every FI Data block that is created. Refer <a href="/data/insights/quickstart/api-integration" target="_blank">API integration</a> to integrate with Data ingestion APIs.
+Once you have the financial data of a user, you can feed this data into Setu Insights with a customer reference id. Use a single `refId` for an individual customer use case. Refer <a href="/data/insights/quickstart/api-integration" target="_blank">API integration</a> to integrate with Data ingestion APIs.
 
 <hr className="primary" />
 
 ### Step 3—Generate insights
 
-You can generate insights for each FI Data block that is created in the previous step. To generate insights, pass the `templateId` and `dataId` from the previous steps.
+You can generate insights for each customer that is created in the previous step. To generate insights, pass the `templateId` and `refId` from the previous steps.
 
 An insight report is idenitified by a `reportId` and will be sent to you asynchronously on the notification URL you provide. You can also fetch a generated insight with the `reportId` at any point. Refer <a href="/data/insights/quickstart/api-integration" target="_blank">API integration</a> to integrate with Insight generation APIs.
 
