changed the error object keys to camel case

--- a/content/payments/billpay/pre-built-screens/webhooks.mdx
+++ b/content/payments/billpay/pre-built-screens/webhooks.mdx
@@ -671,9 +671,9 @@ Below are the parameter tables and sample payloads for the listed events. Note t
     "event": "bill_payment_failure",
     "refId": "CMA0I65RCU2I32C3L0H0KNYQYAG40021831",
     "error": {
-        "Code": "insufficient-balance",
-        "Message": "Insufficient balance in the bank account. Please ensure sufficient funds are available before retrying.",
-        "Type": "FUND_TRANSFER"
+        "code": "insufficient-balance",
+        "message": "Insufficient balance in the bank account. Please ensure sufficient funds are available before retrying.",
+        "type": "FUND_TRANSFER"
     }
 }`}
         </CodeBlockWithCopy>
@@ -826,7 +826,7 @@ Below are the parameter tables and sample payloads for the listed events. Note t
                 <td>error</td>
                 <td>Object</td>
                 <td>Error details for failure of bill payment</td>
-                <td><code>[&#123;&quot;Code&quot;: &quot;insufficient-balance&quot;, &quot;Message&quot;: &quot;66578Insufficient balance in the bank account. Please ensure sufficient funds are available before retrying.01290&quot;, &quot;Type&quot;: &quot;FUND_TRANSFER&quot;]</code></td>
+                <td><code>[&#123;&quot;code&quot;: &quot;insufficient-balance&quot;, &quot;message&quot;: &quot;66578Insufficient balance in the bank account. Please ensure sufficient funds are available before retrying.01290&quot;, &quot;type&quot;: &quot;FUND_TRANSFER&quot;]</code></td>
             </tr>
         </table>
     </details>
