feature(bill payments): plan mdm integration guide

--- a/content/payments/billpay/api-integration/apis.mdx
+++ b/content/payments/billpay/api-integration/apis.mdx
@@ -273,6 +273,13 @@ For your convenience, Setu also provides actions to list data in bulk, that can 
     —lists all billers on BBPS.
 -   <a
         target="_blank"
+        href="/payments/billpay/api-integration/api-reference#/category~List/path~/api/v2/bbps/bills/plans/get"
+    >
+        List plans
+    </a>
+    —lists all plans for billers on BBPS.
+-   <a
+        target="_blank"
         href="/payments/billpay/api-integration/api-reference#/category~Take_bulk_actions/operation~getDisputes"
     >
         List disputes
