fix(bill payments): hyper links

--- a/content/payments/billpay/api-integration/apis.mdx
+++ b/content/payments/billpay/api-integration/apis.mdx
@@ -295,7 +295,7 @@ For your convenience, Setu also provides actions to list data in bulk, that can 
     <li>
         <a
             target="_blank"
-            href="/payments/billpay/api-integration/api-reference#/category~Take_bulk_actions/operation~getCategories"
+            href="/payments/billpay/api-integration/api-reference#/category~List/path~/api/v2/bbps/categories/get"
         >
             List categories
         </a>
@@ -304,7 +304,7 @@ For your convenience, Setu also provides actions to list data in bulk, that can 
     <li>
         <a
             target="_blank"
-            href="/payments/billpay/api-integration/api-reference#/category~Take_bulk_actions/operation~getBillers"
+            href="/payments/billpay/api-integration/api-reference#/category~List/path~/api/v2/bbps/billers/get"
         >
             List billers
         </a>
@@ -313,7 +313,7 @@ For your convenience, Setu also provides actions to list data in bulk, that can 
 	<li>
 		<a
 			target="_blank"
-			href="/payments/billpay/api-integration/api-reference#/category~List/path~/api/v2/bbps/bills/plans/get"
+			href="/payments/billpay/api-integration/api-reference#/category~List/operation~getBillerPlans"
 		>
 			List plans
 		</a>
@@ -322,11 +322,11 @@ For your convenience, Setu also provides actions to list data in bulk, that can 
     <li>
         <a
             target="_blank"
-            href="/payments/billpay/api-integration/api-reference#/category~Take_bulk_actions/operation~getDisputes"
+            href="/payments/billpay/api-integration/api-reference#/category~List/path~/api/v2/bbps/disputes/get"
         >
             List disputes
         </a>
-        —lists all the raised disputes using the <a target="_blank" href="/payments/billpay/api-integration/api-reference#/category~Manage_Dispute/operation~DisputeRequest">Dispute API</a>.
+        —lists all the raised disputes using the <a target="_blank" href="/payments/billpay/api-integration/api-reference#/category~Dispute/path~/api/v2/bbps/bills/complaint/request/post">Dispute API</a>.
     </li>
     <li>
         <a
@@ -345,13 +345,13 @@ For your convenience, Setu also provides actions to list data in bulk, that can 
     <li>
         <a
             target="_blank"
-            href="/payments/billpay/api-integration/api-reference#/category~Take_bulk_actions/operation~getTxns"
+            href="/payments/billpay/api-integration/api-reference#/category~List/path~/api/v2/bbps/transactions/get"
         >
             List paid bills
         </a>
         —lists all the bill pay transactions paid using <a
             target="_blank"
-            href="/payments/billpay/api-integration/api-reference#/category~Pay_bill/operation~PaymentRequest"
+            href="/payments/billpay/api-integration/api-reference#/category~Pay/path~/api/v2/bbps/bills/payment/request/post"
         >
             Pay API
         </a>.
