Clarify `upmsEnabled` requirement for UPMS
UPMS registrations are only valid for billers with the
`upmsEnabled` flag set to true. This commit updates the
documentation to reflect this and adds a warning callout
with instructions on how to verify this flag using the
List Billers API.

--- a/content/payments/billpay/api-integration/upms.mdx
+++ b/content/payments/billpay/api-integration/upms.mdx
@@ -65,7 +65,11 @@ This document provides comprehensive information on:
 
 ### 2.1 UPMS Registration
 
-A UPMS registration represents an end-customer's mandate with a biller for automatic bill presentment via your app. A successful registration authorizes the biller (with customer consent) to push bill details for that customer through BBPS to us, and subsequently, to you via callbacks.
+A UPMS registration represents an end-customer's mandate with a UPMS enabled biller for automatic bill presentment via your app. A successful registration authorizes the biller (with customer consent) to push bill details for that customer through BBPS to us, and subsequently, to you via callbacks.
+
+<Callout type="warning">
+<b>UPMS is only available for billers who have the <code>upmsEnabled</code> flag set to <code>true</code>.</b> You can check this flag using the <a href="/payments/billpay/api-integration/api-reference#/category~List/operation~getBillers">List billers API</a>, which also allows filtering by this flag. Trying to create a UPMS registration for billers without <code>upmsEnabled</code> set to <code>true</code> will fail.
+</Callout>
 
 ### 2.2 Registration Lifecycle
 
