added template apis, pdf ingestion apis, purge api and updated quick start for insights v2

--- a/content/data/insights/quickstart.mdx
+++ b/content/data/insights/quickstart.mdx
@@ -10,9 +10,8 @@ visible_in_sidebar: true
 Here is a quick summary of steps to help you integrate with Setu’s Insights API. Before you start, there are some key terms that will be referred to periodically in the documentation—
 
 - **Reference Id**—Developers can define an identifier to manage and track one customer's data points. This identifier is used throughout the lifecycle to push data, generate insights and finally purge any data from the system.
-- **FI Data block**—FI Data blocks are the data received from the FIP (Financial information provider), via the AA. Currently, we support bank statement, equities, mutual_fund and etf datablocks. In addition, we support ePDF based bank statements for Indian banks.
-- **Template**—A template is a pre-configured format that determines the structure of the generated report, including which insights to generate. You can pick and choose exactly what insights should be added to a template, based on your needs.  
-For example, if you only want to generate income and expense insights of a customer, the template can contain only those two insights.
+- **FI Data block**—FI Data blocks are the data received from the FIP (Financial information provider), via the AA. Currently, we support bank statement, equities, mutual_fund and etf datablocks. In addition, we support ePDF-based bank statements for Indian banks.
+- **Template**—A template is a pre-configured format that determines the structure of the generated report, including which insights to generate. You can define and manage templates using our APIs (see API integration page for `POST` and `PUT` template APIs).
 
 <Callout type="tip">
   Please refer to the Account Aggregator's{" "}
@@ -24,44 +23,59 @@ For example, if you only want to generate income and expense insights of a custo
 
 <hr className="primary" />
 
-<br />
+### Step 1—Create a template
 
-### Step 1—Template creation
+You can create a template either by contacting Setu, or directly via API.
 
-You need to send in the below information to [insights@setu.co](mailto:insights@setu.co), for setting up your template.
+#### Option 1: Email template details
 
-|                           |                                                                                                                                                      |
-| ------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **FIU ID**                | This can be obtained from your AA integration                                                                                                        |
-| **Notification endpoint** | An endpoint where Setu will send you webhook notifications for events. See <a href="/data/insights/notifications" target="_blank">notifications</a>. |
-| **Template name**         | Choose a suitable name, which helps you easily recognise this template                                                                               |
-| **Use case**         | Sharing your use case will help us guide you with finalizing relevant insights. Typical use cases, Loan Underwriting, F&O, Portfolio Management, Personal Finance Management, etc. |
-| **Insights required**     | A list of required Insights. Send an email to [insights@setu.co](mailto:insights@setu.co) for full list of insights.                                       |
-| **Output format**         | Format in which you need the output — currently we support `JSON`, and `XLSX`.
-<br />
+Send the following details to [insights@setu.co](mailto:insights@setu.co) —
 
-Setu will create a template for you and share a `templateID`, which can be used
-in the API calls.
+| Field                  | Description                                                                                                                                  |
+|------------------------|----------------------------------------------------------------------------------------------------------------------------------------------|
+| **FIU ID**             | Obtained from your AA integration                                                                                                            |
+| **Notification endpoint** | Where Setu will send webhook events. See <a href="/data/insights/notifications">Notifications</a>.                                         |
+| **Template name**      | Choose a unique, descriptive name                                                                                                            |
+| **Use case**           | Helps Setu suggest the most relevant insights—e.g. Loan underwriting, PFM, Wealth tracking, F&O, etc.                                       |
+| **Insights required**  | List of insights you want. For full list, email us.                                                                                         |
+| **Output format**      | Choose from `JSON`, or `XLSX`                                                                                                                |
+
+#### Option 2: Use API to create/update template
+
+You can create (`POST /v2/template`) or update (`PUT /v2/template`) templates via API. See <a href="/data/insights/quickstart/api-integration">API Integration</a> for details.
+
+Setu will respond with a `templateId`, which is required to generate insight reports.
 
 <hr className="primary" />
 
-### Step 2—Feed data
+### Step 2—Ingest data
 
-Once you have the financial data of a user, you can feed this data into Setu Insights with a customer reference id. Use a single `refId` for an individual customer use case. Refer <a href="/data/insights/quickstart/api-integration" target="_blank">API integration</a> to integrate with Data ingestion APIs.
+Once you have the user’s financial data, you can push it to Setu Insights using:
+
+- **AA-sourced JSON** – Use `/v2/fiData`
+- **Bank PDF statements** – Use `/v2/pdf-ingest` for PDF uploads
+
+Use a single `refId` per customer. See the <a href="/data/insights/quickstart/api-integration">API Integration</a> section for details.
 
 <hr className="primary" />
 
 ### Step 3—Generate insights
 
-You can generate insights for each customer that is created in the previous step. To generate insights, pass the `templateId` and `refId` from the previous steps.
+Use the `templateId` and `refId` to generate insights with the `/v2/report` API.
 
-An insight report is idenitified by a `reportId` and will be sent to you asynchronously on the notification URL you provide. You can also fetch a generated insight with the `reportId` at any point. Refer <a href="/data/insights/quickstart/api-integration" target="_blank">API integration</a> to integrate with Insight generation APIs.
+- You’ll receive a `reportId` in response
+- Insights will be sent to your webhook URL
+- You can fetch reports later using this `reportId`
+
+<hr className="primary" />
+
+### Step 4—(Optional) Purge customer data
+
+You can delete a customer’s data from Setu using the `refId` via `/v2/purge` API. Useful for compliance and data minimization needs.
 
 <hr className="primary" />
 
 ## Test on Postman or integrate APIs
-
-If you are getting started with the integration, we recommend that you familiarise yourself with setting up Postman and configuring **credentials**. If you have already completed this step, you can integrate with the Setu Insights APIs directly.
 
 <Row>
   <Portion desktopSpan="half">
