--- a/content/data/insights/quickstart.mdx
+++ b/content/data/insights/quickstart.mdx
@@ -11,7 +11,8 @@ Here is a quick summary of steps to help you integrate with Setu’s Insights AP
 
 - **Reference Id**—Developers can define an identifier to manage and track one customer's data points. This identifier is used throughout the lifecycle to push data, generate insights and finally purge any data from the system.
 - **FI Data block**—FI Data blocks are the data received from the FIP (Financial information provider), via the AA. Currently, we support bank statement, equities, mutual_fund and etf datablocks. In addition, we support ePDF-based bank statements for Indian banks.
-- **Template**—A template is a pre-configured format that determines the structure of the generated report, including which insights to generate. You can define and manage templates using our APIs (see API integration page for `POST` and `PUT` template APIs).
+- **Template**—A template is a pre-configured format that determines the structure of the generated report, including which insights to generate. You can pick and choose exactly what insights should be added to a template, based on your needs.  
+For example, if you only want to generate income and expense insights of a customer, the template can contain only those two insights.
 
 <Callout type="tip">
   Please refer to the Account Aggregator's{" "}
@@ -34,11 +35,11 @@ Send the following details to [insights@setu.co](mailto:insights@setu.co) —
 | Field                  | Description                                                                                                                                  |
 |------------------------|----------------------------------------------------------------------------------------------------------------------------------------------|
 | **FIU ID**             | Obtained from your AA integration                                                                                                            |
-| **Notification endpoint** | Where Setu will send webhook events. See <a href="/data/insights/notifications">Notifications</a>.                                         |
-| **Template name**      | Choose a unique, descriptive name                                                                                                            |
-| **Use case**           | Helps Setu suggest the most relevant insights—e.g. Loan underwriting, PFM, Wealth tracking, F&O, etc.                                       |
-| **Insights required**  | List of insights you want. For full list, email us.                                                                                         |
-| **Output format**      | Choose from `JSON`, or `XLSX`                                                                                                                |
+| **Notification endpoint** | An endpoint where Setu will send you webhook notifications for events. See <a href="/data/insights/notifications" target="_blank">notifications</a>.                                         |
+| **Template name**      | Choose a suitable name, which helps you easily recognise this template                                                                                                            |
+| **Use case**           | Sharing your use case will help us guide you with finalizing relevant insights. Typical use cases, Loan Underwriting, F&O, Portfolio Management, Personal Finance Management, etc.                                       |
+| **Insights required**  |  A list of required Insights. Send an email to [insights@setu.co](mailto:insights@setu.co) for full list of insights.                                               |
+| **Output format**      | Format in which you need the output — currently we support `JSON`, and `XLSX`.                                                                                                                |
 
 #### Option 2: Use API to create/update template
 
@@ -60,18 +61,20 @@ Use a single `refId` per customer. See the <a href="/data/insights/quickstart/ap
 <hr className="primary" />
 
 ### Step 3—Generate insights
+You can generate insights for each customer that is created in the previous step. To generate insights, pass the `templateId` and `refId` from the previous steps.
 
 Use the `templateId` and `refId` to generate insights with the `/v2/report` API.
 
 - You’ll receive a `reportId` in response
 - Insights will be sent to your webhook URL
 - You can fetch reports later using this `reportId`
+- Refer <a href="/data/insights/quickstart/api-integration" target="_blank">API integration</a> to integrate with Insight generation APIs.
 
 <hr className="primary" />
 
 ### Step 4—(Optional) Purge customer data
 
-You can delete a customer’s data from Setu using the `refId` via `/v2/purge` API. Useful for compliance and data minimization needs.
+You can delete a customer’s data from Setu using the `refId` via `/v2/purge` API. Useful for compliance and data minimization needs. See the <a href="/data/insights/quickstart/api-integration">API Integration</a> section for details.
 
 <hr className="primary" />
 
