refactor after the team review

--- a/content/data/insights/quickstart.mdx
+++ b/content/data/insights/quickstart.mdx
@@ -72,9 +72,16 @@ Use the `templateId` and `refId` to generate insights with the `/v2/report` API.
 
 <hr className="primary" />
 
-### Step 4—(Optional) Purge customer data
+### Step 4 — (Optional) Purge Customer Data
 
-You can delete a customer’s data from Setu using the `refId` via `/v2/purge` API. Useful for compliance and data minimization needs. See the <a href="/data/insights/quickstart/api-integration">API Integration</a> section for details.
+You can delete a customer’s data from Setu using the `refId` via the `/v2/purge` API. This is useful for meeting data minimization and regulatory compliance requirements such as user data deletion requests under privacy laws.
+
+When a purge is triggered:
+
+- **All Financial Information (FI) data** retrieved for the user is permanently deleted.
+- **All insights** generated from this FI data—such as income summaries, categorized transactions, and financial behavior indicators—are also removed.
+
+See the <a href="/data/insights/quickstart/api-integration">API Integration</a> section for more details on how to use this endpoint.
 
 <hr className="primary" />
 
