made some changes

--- a/content/payments/billpay/api-integration/remittance_flows_guide.mdx
+++ b/content/payments/billpay/api-integration/remittance_flows_guide.mdx
@@ -155,12 +155,12 @@ The White-label and Custom Payment flow introduces additions to:
 
 | Payment Mode | Value Example | Length Constraints | NPCI Code | Description |
 |--------------|---------------|-------------------|-----------|-------------|
-| **IMPS** | `9240111\|9004644121` | Fixed: 18 | MMID\|MobileNo | MMID and mobile number used for payment |
-| **NEFT, AccountTransfer, BharatQR, InternetBanking** | `SRAN0000341\|9912345123456` | Min: 3, Max: 50 | IFSC\|AccountNo | IFSC and account number used for payment |
-| **CreditCard, DebitCard, PrepaidCard** | `1234567890123456\|123456` | Min: 3, Max: 50 | CardNum\|AuthCode | Card number and authorization code used for payment |
+| **IMPS** | <code>9240111\|9004644121</code> | Fixed: 18 | MMID\|MobileNo | MMID and mobile number used for payment |
+| **NEFT, AccountTransfer, BharatQR, InternetBanking** | <code>SRAN0000341\|9912345123456</code> | Min: 3, Max: 50 | IFSC\|AccountNo | IFSC and account number used for payment |
+| **CreditCard, DebitCard, PrepaidCard** | <code>1234567890123456\|123456</code> | Min: 3, Max: 50 | CardNum\|AuthCode | Card number and authorization code used for payment |
 | **UPI** | `dummy@ybl` | Min: 3, Max: 50 | VPA | Virtual Provider Address used for payment |
-| **Wallet** | `PayTM\|9004644121` | Min: 12, Max: 50 | WalletName\|MobileNo | Wallet name and mobile number used for payment |
-| **AEPS, BHIM Aadhaar Pay** | `123456789012\|1234567` | Min: 3, Max: 50 | Aadhaar\|IIN | Aadhaar number and IIN used for payment |
+| **Wallet** | <code>PayTM\|9004644121</code> | Min: 12, Max: 50 | WalletName\|MobileNo | Wallet name and mobile number used for payment |
+| **AEPS, BHIM Aadhaar Pay** | <code>123456789012\|1234567</code> | Min: 3, Max: 50 | Aadhaar\|IIN | Aadhaar number and IIN used for payment |
 | **Cash, USSD** | `<Payment remarks>` | Min: 1, Max: 50 | Remarks | Remarks when payment mode is cash |
 
 ### Code Format Examples
@@ -170,12 +170,12 @@ The following table provides detailed formatting specifications for different NP
 | Code | Format | Example |
 |------|--------|---------|
 | **Remarks** | Alphanumeric Special<br/>Min Length: 1, Max Length: 50 | `UNI000` |
-| **CardNum\|AuthCode** | Alphanumeric with characters on either side of '\|' separator<br/>Min Length: 3, Max Length: 50 | `1234567890123456\|123456` |
-| **IFSC\|AccountNo** | Alphanumeric with characters on either side of '\|' separator<br/>Min Length: 3, Max Length: 50 | `SRAN0000341\|01234567` |
-| **MMID\|MobileNo** | Numeric with characters on either side of '\|' separator<br/>Fixed Length: 18 | `9240111\|9004644121` |
-| **WalletName\|MobileNo** | Alphanumeric with characters on either side of '\|' separator<br/>Min Length: 12, Max Length: 50 | `TA Wallet\|9004644121` |
+| **CardNum\|AuthCode** | Alphanumeric with characters on either side of '\|' separator<br/>Min Length: 3, Max Length: 50 | <code>1234567890123456\|123456</code> |
+| **IFSC\|AccountNo** | Alphanumeric with characters on either side of '\|' separator<br/>Min Length: 3, Max Length: 50 | <code>SRAN0000341\|01234567</code> |
+| **MMID\|MobileNo** | Numeric with characters on either side of '\|' separator<br/>Fixed Length: 18 | <code>9240111\|9004644121</code> |
+| **WalletName\|MobileNo** | Alphanumeric with characters on either side of '\|' separator<br/>Min Length: 12, Max Length: 50 | <code>TA Wallet\|9004644121</code> |
 | **VPA** | Alphanumeric Special<br/>Min Length: 3, Max Length: 50 | `manoj@icici` |
-| **Aadhaar\|IIN** | Alphanumeric with characters on either side of '\|' separator<br/>Min Length: 3, Max Length: 50 | `123456789012\|1234567` |
+| **Aadhaar\|IIN** | Alphanumeric with characters on either side of '\|' separator<br/>Min Length: 3, Max Length: 50 | <code>123456789012\|1234567</code> |
 
 ### Field Handling Rules
 
