made some changes

--- a/content/payments/billpay/api-integration/remittance_flows_guide.mdx
+++ b/content/payments/billpay/api-integration/remittance_flows_guide.mdx
@@ -169,13 +169,13 @@ The bill payment request API has been enhanced to include remitter details under
 
 ### Payment Event Webhook Enhancement
 
-The payment event webhook has been enhanced to include remitter details under the `remitter` object and account information within the `accountInfo` property.
+The webhook API for payment events will now support remitter details under the `remitter` object and account information within the `accountInfo` property in the incoming payload <a href="payments/billpay/pre-built-screens/custom-payment/apis#webhook">(See Webhook API Reference).</a>
 
 <Card padding="nano" shape="rounded">
     <details>
         <summary>
             <Text weight="600" marginBottom="none">
-                Sample Webhook
+                Sample Request
             </Text>
         </summary>
 <CodeBlockWithCopy language="diff">{`
@@ -201,7 +201,7 @@ The payment event webhook has been enhanced to include remitter details under th
 
 ### Payment Status API Enhancement
 
-The payment status API has been enhanced to include remitter details under the `remitter` object and account information within the `accountInfo` property.
+The payment status API must now include remitter details under the remitter object and account information within the accountInfo property in the response payload <a href="/payments/billpay/pre-built-screens/custom-payment/apis#:~:text=Get%20payment%20status">(See Payment Status API Reference).</a>
 
 <Card padding="nano" shape="rounded">
     <details>
