made some changes

--- a/content/payments/billpay/api-integration/remittance_flows_guide.mdx
+++ b/content/payments/billpay/api-integration/remittance_flows_guide.mdx
@@ -207,7 +207,7 @@ The payment status API must now include remitter details under the remitter obje
     <details>
         <summary>
             <Text weight="600" marginBottom="none">
-                Sample Request
+                Sample Response
             </Text>
         </summary>
 <CodeBlockWithCopy language="diff">{`
