Fix bold mdx issue

--- a/content/dev-tools/bridge/overview.mdx
+++ b/content/dev-tools/bridge/overview.mdx
@@ -21,8 +21,8 @@ You can sign up on the Bridge in a few simple steps:
 2. <ins>Enter or create your password for Bridge.</ins> Make sure you fulfil all the criteria mentioned on the platform; otherwise, you cannot proceed.
 3. <ins>Go to your inbox and confirm your e-mail ID.</ins> We send you an e-mail to verify your ID. 
 4. <ins>Log in to the Bridge account you created.</ins> Use the same e-mail ID and password again to log in to your account, and complete the sign up process.
-5. <ins>Provide your business name.</ins> This should belong to the business you’re setting up the Bridge account for. **Quick note:** You can use a different business name later when you configure the product (say, if you have a subsidiary or a different legal name).
-6. <ins>Optionally, set up 2FA (two-factor authentication) for account login.</ins> Enable or disable 2FA, which asks for a password and an OTP sent to your registered e-mail ID whenever you login.
+5. <ins>Provide your business name.</ins> This should belong to the business you’re setting up the Bridge account for. <strong>Quick note:</strong> You can use a different business name later when you configure the product (say, if you have a subsidiary or a different legal name).
+6. <ins>Optionally, set up 2FA (two-factor authentication) for account login.</ins> Enable or disable 2FA, which asks for a password and an OTP sent to your registered e-mail ID **whenever** you login.
 
 <img src="https://storage.googleapis.com/strapi-assets/latest/bridge-v2-docs/Overview/Sign%20up.gif" alt="Sign up on the bridge" />
 
