Added whitelisting process

--- a/content/data/account-aggregator/consent-object.mdx
+++ b/content/data/account-aggregator/consent-object.mdx
@@ -67,7 +67,7 @@ The `context` parameter accepts key-value pairs to customize the consent flow. B
 | `excludeFipIds` | Exclude specific FIP IDs (comma-separated) | Any valid FIP ID |
 | `consentReviewAt` | Specify when consent should be reviewed | `first`, `last` |
 | `purposeDescription` | Add a custom description for the consent purpose | Any string |
-| `purposeCode` | Specify the purpose code | `101`, `102`, `103`, `104`, `105`, `106` |
+| `purposeCode` | Specify the purpose code | `101`, `102`, `103`, `104`, `105` |
 | `alternateNumber` | Enable/disable alternate number | `true`, `false` |
 | `accountSelectionMode` | Define how accounts should be selected | `single`, `multi`, `multi-opt-out` |
 | `transactionType` | Specify transaction type filter | `debit`, `credit` |
