made some changes

--- a/content/payments/billpay/api-integration/remittance_flows_guide.mdx
+++ b/content/payments/billpay/api-integration/remittance_flows_guide.mdx
@@ -309,9 +309,9 @@ The following table provides detailed formatting specifications for different NP
 
 #### Mandatory Behavior
 - The `accountInfo` field must contain NPCI-compatible values corresponding to the selected payment mode
+- For credit card bill payments, both the `accountInfo` and `remitter` objects must be provided.
 
 #### Optional Field Handling
 - If remitter details or account information are not available, the fields should be omitted entirely
-- Do not pass empty or null values for missing information
-- System automatically handles fallback scenarios for Credit Card payments
+- System automatically handles fallback scenarios
 
