--- a/content/payments/billpay/pre-built-screens/custom-payment/apis.mdx
+++ b/content/payments/billpay/pre-built-screens/custom-payment/apis.mdx
@@ -34,7 +34,14 @@ The following API needs to be integrated by you, and is sent in the case of a su
   "paymentDateTime": "YYYY-MM-DD HH:MM:SS in UTC",
   "amount": "100.00",
   "paymentMode": "CASH|UPI|IMPS|NEFT|AEPS|ACCOUNT TRANSFER|INTERNET BANKING|WALLET|DEBIT CARD|CREDIT CARD|PREPAID CARD|Bharat QR|USSD",
-  "paymentStatus": "SUCCESS|FAILURE"
+  "paymentStatus": "SUCCESS|FAILURE",
+  "remitter": {
+    "name": "XX",
+    "pan": "xxxx",
+    "email": "XXXX",
+    "aadhaar": "XXX"
+  },
+  "accountInfo": "ICIC0000152|1234567890"
 }`}
 </CodeBlockWithCopy>
 
@@ -89,7 +96,14 @@ Content-Type: application/json`}
     "paymentDateTime": "YYYY-MM-DD HH:MM:SS in UTC",
     "amount": "100.00",
     "paymentMode": "CASH|UPI|IMPS|NEFT|AEPS|ACCOUNT TRANSFER|INTERNET BANKING|WALLET|DEBIT CARD|CREDIT CARD|PREPAID CARD|Bharat QR|USSD",
-    "paymentStatus": "SUCCESS|FAILURE"
+    "paymentStatus": "SUCCESS|FAILURE",
+    "remitter": {
+      "name": "XX",
+      "pan": "xxxx",
+      "email": "XXXX",
+      "aadhaar": "XXX"
+    },
+    "accountInfo": "ICIC0000152|1234567890"
   }
 }`}
 </CodeBlockWithCopy>
