made requested changes

--- a/content/payments/billpay/pre-built-screens/custom-payment/apis.mdx
+++ b/content/payments/billpay/pre-built-screens/custom-payment/apis.mdx
@@ -45,8 +45,6 @@ The following API needs to be integrated by you, and is sent in the case of a su
 }`}
 </CodeBlockWithCopy>
 
-The `orderId` is always prefixed with `COUWL` to identify Setu payment requests.
-
 **Response**
 
 <CodeBlockWithCopy language="json">
@@ -54,6 +52,12 @@ The `orderId` is always prefixed with `COUWL` to identify Setu payment requests.
   "status": "acknowledged"
 }`}
 </CodeBlockWithCopy>
+
+**Notes**
+
+- The `orderId` is always prefixed with `COUWL` to identify Setu payment requests.
+- To understand about `remitter` and `accountInfo` properties, please refer to the [integration guide](/payments/billpay/pre-built-screens/remitter-details).
+
 
 <hr class="primary" />
 
@@ -107,6 +111,11 @@ Content-Type: application/json`}
   }
 }`}
 </CodeBlockWithCopy>
+
+**Notes**
+
+- To understand about `remitter` and `accountInfo` properties, please refer to the [integration guide](/payments/billpay/pre-built-screens/remitter-details).
+
 
 <hr class="tertiary" />
 
