made some changes

--- a/content/payments/billpay/pre-built-screens/custom-payment/apis.mdx
+++ b/content/payments/billpay/pre-built-screens/custom-payment/apis.mdx
@@ -53,10 +53,13 @@ The following API needs to be integrated by you, and is sent in the case of a su
 }`}
 </CodeBlockWithCopy>
 
-**Notes**
+<Callout type="info">
 
-- The `orderId` is always prefixed with `COUWL` to identify Setu payment requests.
-- To understand about `remitter` and `accountInfo` properties, please refer to the [integration guide](/payments/billpay/pre-built-screens/remitter-details).
+The `orderId` is always prefixed with `COUWL` to identify Setu payment requests.
+
+To learn more about the `remitter` and `accountInfo` properties, please refer to the [integration guide](/payments/billpay/pre-built-screens/remitter-details).
+
+</Callout>
 
 
 <hr class="primary" />
@@ -112,10 +115,12 @@ Content-Type: application/json`}
 }`}
 </CodeBlockWithCopy>
 
-**Notes**
 
-- To understand about `remitter` and `accountInfo` properties, please refer to the [integration guide](/payments/billpay/pre-built-screens/remitter-details).
+<Callout type="info">
 
+To learn more about the `remitter` and `accountInfo` properties, please refer to the [integration guide](/payments/billpay/pre-built-screens/remitter-details).
+
+</Callout>
 
 <hr class="tertiary" />
 
