--- a/content/payments/billpay/pre-built-screens/custom-payment/apis.mdx
+++ b/content/payments/billpay/pre-built-screens/custom-payment/apis.mdx
@@ -53,7 +53,7 @@ The following API needs to be integrated by you, and is sent in the case of a su
 }`}
 </CodeBlockWithCopy>
 
-<Callout type="info">
+<Callout type="tip">
 
 The `orderId` is always prefixed with `COUWL` to identify Setu payment requests.
 
@@ -116,7 +116,7 @@ Content-Type: application/json`}
 </CodeBlockWithCopy>
 
 
-<Callout type="info">
+<Callout type="tip">
 
 To learn more about the `remitter` and `accountInfo` properties, please refer to the [integration guide](/payments/billpay/pre-built-screens/remitter-details).
 
