fix(bill-payments): dispute statuses

--- a/content/payments/billpay/api-integration/objects.mdx
+++ b/content/payments/billpay/api-integration/objects.mdx
@@ -165,12 +165,10 @@ The Payment Bill object contains information about a specific bill to be paid.
 
 | type              | description                                                                                                                                             |
 | ----------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `INITIALIZED`     | Initialized                                                                                                                                             |
-| `ASSIGNED`        | Complaint has been accepted.                                                                                                                            |
-| `RE_ASSIGNED`     | When Customer BBPOU re assigned the complaint to the Biller BBPOU.                                                                                      |
-| `RESOLVED`        | Once the BBPOU resolves the customer related complaint, the BBPOU updates the system.                                                                   |
-| `DEFAULT_RESOLVED` | If no action is taken by Biller/BBPOU then NPCI automatically resolves the dispute in favour of the customer.                                                                            |
-| `UNRESOLVED`      | If the BBPOU does not respond to the complaint within the specified TAT (Super escalation), the complaint status changed to unresolved.                 |
+| `ASSIGNED`        | After transaction is verified, the ticket is created and assigned to the BBPOU.                                                                        |
+| `RESOLVED`        | After successful resolution of the dispute, the status is updated to resolved in favour of the customer.                                               |
+| `REJECTED`        | The complaint is rejected by the Biller/BBPOU.                                                                                                          |
+| `DEFAULT_RESOLVED` | If no action is taken by Biller/BBPOU then NPCI automatically resolves the dispute in favour of the customer.                                          |
 
 ## Bill Period
 
